[website] updated to 1.34.6: fixed illustrations page bottom panel overlap by footer

--- a/website/docs/style/illustration/styles.module.css
+++ b/website/docs/style/illustration/styles.module.css
@@ -48,6 +48,7 @@
 }
 
 .panelIllustration {
+  z-index: 100;
   position: fixed;
   bottom: 0;
   left: 0;
